objects/Topic_Features__c.object
<CustomObject>
    <description>Features details on the behalf of each topics</description>
    <label>Topic Features</label>
    <nameField>
        <label>Topic Features Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Topic Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Topics__c</fullName>
        <label>Topics</label>
        <referenceTo>Topics__c</referenceTo>
        <relationshipLabel>Topic Features</relationshipLabel>
        <relationshipName>Topic_Features</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Topic_Feature_Status__c</fullName>
        <label>Topic Feature Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Created</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topic_Feature_Ticket_Id__c</fullName>
        <displayFormat>F-{00000}</displayFormat>
        <label>Topic Feature Ticket Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Topic_Features_Description__c</fullName>
        <label>Topic Feature Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>